Fixed spacing issue and made card height uniform for better appearance.

--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,8 @@ nav {
 .card {
   border: 1px lightgrey solid;
   border-radius: 2px;
+  margin-bottom: 10px;
+  min-height: 418px;
 }
 
 .card > img {
